# Properties

./: CMakeLists.txt  Properties.c  README.md
.github/workflows/: cmake-ci.yml
Tests/: CMakeLists.txt  main.c
Tests/Properties/: PropertiesTest.h
include/: Properties.h
